test/files/neg/t10514.check
t10514.scala:8: error: no type parameters for constructor Foo: (value: F[C[G[Foo[F,G]]]]): Foo[F,G] exist so that it can be applied to arguments (Some[C[Foo[Option,Test.this.Id]]])
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : Some[C[Foo[Option,Test.this.Id]]]
 required: ?F[C[?G[Foo[?F,?G]]]]
  new Foo(Some(new C(new Foo[Option, Id](None))))
      ^
t10514.scala:8: error: type mismatch;
 found   : Some[C[Foo[Option,Test.this.Id]]]
 required: F[C[G[Foo[F,G]]]]
  new Foo(Some(new C(new Foo[Option, Id](None))))
              ^
2 errors
